[tool.poetry]
name = "curso-logica-jogos-rust"
version = "0.1.0"
description = "Curso de programacao em Rust"
authors = ["Jônatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "curso_logica_jogos_rust"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.2"
mkdocs-backlinks = "^0.9.1"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-material = "^9.1.21"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
taskipy = "^1.12.0"
mkdocs-glightbox = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
